# FOMOD-Creation-Kit

./: .gitignore  .gitmodules  Changelog.md  FOMOD-Creation-Kit.code-workspace  README.md  installer.iss  pyproject.toml  update.json  update_lupdate_file.bat
.github/workflows/: lint_and_test.yaml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
res/: base_stylesheet.qss  dark_stylesheet.qss  dark_theme.json  ext_resources.json  light_stylesheet.qss  light_theme.json  resources.qrc  style.qss
res/loc/: de.ts  pt_BR.ts
res/schemas/: ModConfig5.0.xsd  ModuleConfig.xsd  info.xsd
scripts/: build.py
src/: app.py  main.py
src/core/config/: app_config.py  behavior_config.py
src/core/fomod/: exceptions.py  finalizer.py  fomod.py  fomod_info.py  fomod_model.py  fomod_version.py
src/core/fomod_editor/: exceptions.py  history.py  utils.py
src/core/utilities/: clipboard.py  exception_handler.py  exceptions.py  filesystem.py  licenses.py  localized_enum.py  logger.py  path.py  qt_res_provider.py  reference_dict.py  reverse_dict.py  unique.py  updater.py  web_utils.py  xml.py
src/ui/: main_widget.py  main_window.py  menubar.py  statusbar.py
src/ui/fomod_editor/: base_editor_widget.py  conditional_files_editor_tab.py  conditional_files_editor_widget.py  dependency_editor_tab.py  dependency_editor_widget.py  editor_dialog.py  editor_window.py  editor_window_service.py  file_list_editor_widget.py  fomod_editor_widget.py  fs_item_editor_widget.py  info_editor_tab.py  info_editor_widget.py  module_config_editor_widget.py  required_files_editor_tab.py  required_files_editor_widget.py  steps_editor_tab.py  steps_editor_widget.py  utils.py
src/ui/settings/: settings_dialog.py  settings_widget.py
src/ui/utilities/: icon_provider.py  stylesheet_processor.py  theme_manager.py  tool_tip.py  tree_widget.py
src/ui/widgets/: about_dialog.py  auto_complete_combobox.py  browse_edit.py  collapsible_label.py  collapsible_text_edit.py  enum_dropdown.py  enum_radiobutton_widget.py  error_dialog.py  help_label.py  image_label.py  image_viewer.py  loading_dialog.py  search_bar.py  section_area_widget.py  tree_widget_editor.py  url_edit.py  xml_validator_dialog.py
tests/: base_test.py  utils.py
tests/core/config/: test_app_config.py
tests/core/fomod/: test_finalizer.py  test_fomod.py  test_fomod_info.py  test_fomod_model.py
tests/core/fomod_editor/: test_utils.py
tests/data/TestFomodInfo/: info.xml
tests/ui/: test_main_window.py  ui_test.py
tests/ui/_setup/: clipboard.py
tests/ui/fomod_editor/: test_file_list_editor_widget.py  test_fs_item_editor_widget.py  test_info_editor_tab.py
(+90 files in other folders)
