[project]
name = "fomod-creation-kit"
version = "1.0.0-beta-2"
description = "FOMOD Creation Kit"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Cutleast", email = "cutleast@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "chardet",
    "comtypes",
    "darkdetect",
    "jstyleson",
    "lxml",
    "pydantic",
    "pydantic-xml",
    "pyside6",
    "pywin32",
    "qtawesome",
    "requests",
    "semantic-version",
    "send2trash",
]

[dependency-groups]
dev = [
    "cx-freeze",
    "pyfakefs",
    "pyright",
    "pytest",
    "pytest-mock",
    "pytest-qt",
    "ruff",
    "types-lxml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s.%(msecs)03d][%(levelname)s][%(name)s.%(funcName)s]: %(message)s"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
exclude = ["**/__pycache__"]
stubPath = "./stubs"
extraPaths = ["./src"]

# Check here for a full list of options: https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-settings-defaults
deprecateTypingAliases = false
reportConstantRedefinition = true
reportDeprecated = "warning"
reportDuplicateImport = true
reportIncompleteStub = "warning"
reportIncompatibleMethodOverride = "warning"
reportInconsistentConstructor = "warning"
reportImplicitOverride = "warning"
reportInvalidStubStatement = "warning"
reportMatchNotExhaustive = false
reportMissingImports = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPrivateUsage = "warning"
reportShadowedImports = "warning"
reportTypeCommentUsage = "information"
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryTypeIgnoreComment = "information"
reportUnusedClass = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "warning"
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
